--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.5.9*/
+/*1.6.0*/
 
 	/*Main color variables*/
 	:root
@@ -292,9 +292,12 @@
 	/*Toggle button to play next*/
 	paper-toggle-button[checked]:not([disabled]) .toggle-bar.paper-toggle-button
 	{
-		--paper-toggle-button-checked-button-color: rgb(255,255,255) !important;
 		background-color: var(--main-color) !important;
 		opacity: 1 !important;
+	}
+	paper-toggle-button[checked]:not([disabled]) .toggle-button.paper-toggle-button
+	{
+		--paper-toggle-button-checked-button-color: rgb(255,255,255) !important;
 	}
 	
 	/*Badges*/
