--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.6.2*/
+/*1.6.3*/
 
 	/*Main color variables*/
 	:root
@@ -212,6 +212,11 @@
 	ytd-consent-bump-renderer
 	{
 		border-bottom: 1px solid var(--main-color) !important;
+	}
+	
+	#title.ytd-grid-channel-renderer
+	{
+		color: rgb(255,255,255) !important;
 	}
 	
 	/*For the outline around the channel name*/
@@ -588,6 +593,14 @@
 	.style-scope.yt-next-continuation:hover
 	{
 		background-color: var(--hover-background) !important;
+		color: var(--main-color) !important;
+	}
+	yt-formatted-string.ytd-expanded-shelf-contents-renderer
+	{
+		color: var(--dimer-text) !important;
+	}
+	yt-formatted-string.ytd-expanded-shelf-contents-renderer:hover
+	{
 		color: var(--main-color) !important;
 	}
 	
