--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -5,7 +5,7 @@
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
-/*1.7.0*/
+/*1.7.1*/
 
 	/*Main color variables*/
 	:root
@@ -466,6 +466,17 @@
 	{
 		box-shadow: none !important;
 	}
+	/*Video menu*/
+	.ytp-popup
+	{
+		background: var(--second-background) !important;
+		opacity: .9 !important;
+	}
+	.ytp-menuitem:hover:not([aria-disabled="true"]) 
+	{
+		background-color: var(--hover-background) !important;
+	}
+
 	
 	/*Popup for when you hover over the channel avatar in the video*/
 	.iv-branding .branding-context-container-inner
